[package]
name = "kaisa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Dashboard
rillrate = "0.41.0"
notify = "=5.0.0-pre.14"
rill-protocol = "0.41.0"

# Daemons
daemonize = "0.4.1"

# Runtime
tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11.12"
tempfile = "3.3.0"
error-chain = "0.12.4"
octocrab = "0.17.0"
anyhow = "1.0.65"
env_logger = "0.9.1"
